# AKO4X

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  spawn.py
ako4x/: __init__.py  agent_runtime.py  backends.py  cli.py  events.py  lanes.py  production.py  production_config.py  skill_sources.py  training.py
compat/: overrides-macos.txt
compat/flashinfer-shim/: pyproject.toml
compat/flashinfer-shim/flashinfer/: __init__.py  testing.py
docs/: closed-loop.md  installation.md  porting.md  production.md  troubleshooting.md
master/: MASTER.md  __init__.py  harness-ledger.md  master.py
reference/dsa-sparse-attention/: README.md  TRAPS.md  baseline.json
reference/dsa-sparse-attention/variants/cute_reduce/: config.toml  kernel.py  result.json
reference/dsa-sparse-attention/variants/cute_reduce_v5/: config.toml  kernel.py  parent.txt  result.json
reference/dsa-sparse-attention/variants/cute_reduce_v6/: config.toml  kernel.py  parent.txt  result.json  variance.json
reference/dsa-sparse-attention/variants/cute_reduce_v7/: FUSED_KERNEL_DESIGN.md  config.toml  kernel.py  (+2 more)
reference/dsa-topk-indexer/: README.md  TRAPS.md  baseline.json
reference/gdn-decode/: README.md  TRAPS.md  baseline.json
reference/gdn-prefill/: README.md  TRAPS.md  baseline.json
reference/gemm-n2048-k4096/: README.md  baseline.json
reference/gqa-paged-decode-h32-kv8-d128-ps1/: README.md  baseline.json
reference/mla-paged-decode-h16-ckv512-kpe64-ps1/: README.md  baseline.json
reference/mla-paged-prefill-causal-h16-ckv512-kpe64-ps1/: README.md  TRAPS.md  baseline.json
reference/moe-fp8-block-scale/: README.md  TRAPS.md  baseline.json
reference/moe-fp8-block-scale-ds-routing-topk8-ng8-kg4-e32-h7168-i2048/: README.md  TRAPS.md  baseline.json
reference/rmsnorm-h128/: README.md  baseline.json
scripts/: CLAUDE.md  backfill_parent_txt.py  bench_utils.py  benchmark_adapter.py  campaign_start.py  cheat_check_modal.py  diff_trajectory.py  pack_solution.py  run_local.py  run_local_profile.py  run_local_sanitize.py  run_modal.py  run_modal_profile.py  run_modal_sanitize.py
templates/: closed-loop-scope.md  gitignore  iterations.md  retrospective.md  task.md
templates/agent/: claude.json  codex.json  lessons-convention.md
templates/agent/commands/: review.md
templates/agent/hooks/: advisory-review.sh
templates/benchmark/: evaluation.toml
templates/production/: AGENT_POLICY.md  project.toml  skills.toml
templates/skills/bench/: SKILL.md  benchmark.md
templates/skills/benchmark/: SKILL.md  benchmark.md
templates/skills/cpp/: SKILL.md  cpp.md
templates/skills/cuda/: SKILL.md  cuda.md
templates/skills/cute-dsl/: SKILL.md  cute-dsl.md
templates/skills/production-kernel/: SKILL.md
templates/skills/profiler-ncu/: SKILL.md  ncu.md
templates/skills/sanitizer/: SKILL.md  sanitizer.md
templates/skills/tilelang/: SKILL.md  tilelang.md
templates/skills/triton/: SKILL.md  triton.md
tests/: test_agent_runtime.py  test_cli.py  test_events.py  test_lanes.py  test_master_codex.py  test_production_pipeline.py  test_skill_sources.py  test_training.py
(+191 files in other folders)
